RESOLVED FIXED54990
[GTK] fast/frames/iframe-scale-applied-twice.html fails after r79167
https://bugs.webkit.org/show_bug.cgi?id=54990
Summary [GTK] fast/frames/iframe-scale-applied-twice.html fails after r79167
Martin Robinson
Reported 2011-02-22 12:59:27 PST
r79167 modified ScrollView::visibleContentsRect and we must update the forked version we use for the GTK+ port.
Attachments
Patch (2.06 KB, patch)
2011-02-22 13:04 PST, Martin Robinson
no flags
Martin Robinson
Comment 1 2011-02-22 13:03:20 PST
Link to the changeset that broke the test: http://trac.webkit.org/changeset/79167
Martin Robinson
Comment 2 2011-02-22 13:04:47 PST
Xan Lopez
Comment 3 2011-02-22 13:06:04 PST
Comment on attachment 83373 [details] Patch OK.
Martin Robinson
Comment 4 2011-02-22 13:06:48 PST
mitz
Comment 5 2011-02-22 14:20:02 PST
Apologies for the breakage, and thanks for fixing this!
Martin Robinson
Comment 6 2011-02-22 14:40:11 PST
(In reply to comment #5) > Apologies for the breakage, and thanks for fixing this! No problem! Eventually, when I have more time I'd like to figure out a way to share this code with everyone.
Note You need to log in before you can comment on or make changes to this bug.