2011-02-22  Martin Robinson  <mrobinson@igalia.com>

Reviewed by Xan Lopez.

        [GTK] fast/frames/iframe-scale-applied-twice.html fails after r79167
        https://bugs.webkit.org/show_bug.cgi?id=54990

        No new tests. This will cause fast/events/scroll-after-click-on-tab-index.html
        to start passing again.

        * platform/gtk/ScrollViewGtk.cpp:
        (WebCore::ScrollView::visibleContentRect): Update this method to match the original
        in the parent class.

Canonical link: https://commits.webkit.org/69272@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@79350 268f45cc-cd09-0410-ab3c-d52691b4dbfc